# baldin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  LISCENSE  README.md  REFERENCES.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  openapi.json
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.prod  Pipfile  README.md  cli.py  cover_letter.ipynb  dev.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: admin.py  chrome.py  conf.py  conftest.py  db.py  initial_data.py  linkedin.py  logging.py  main.py  models.py  schemas.py  session.py  summarizer.py  utils.py
backend/app/api/: api.py  crud.py  deps.py  leads.py  loader.py  searches.py
backend/app/api/extractor/: retrieval.py
backend/app/api/routes/: applications.py  auth.py  certificate.py  companies.py  contacts.py  cover_letters.py  data_orchestration.py  db_management.py  education.py  etl.py  experiences.py  extractor.py  leads.py  resumes.py  searches.py  services.py  skills.py  users.py
backend/app/core/: chrome.py  completions.py  conf.py  db.py  langchain.py  openai.py  security.py
backend/app/etl/: base.py  job.py  search.py
backend/app/etl/leads/: enrich.py  scrape.py
backend/app/etl/models/: base.py  resume.py
backend/app/extractor/: extraction_runnable.py  llm.py  main.py  models.py  parsing.py  retrieval.py
backend/app/extractor/api/: configurables.py  examples.py  extract.py  extractors.py  shared.py  suggest.py
backend/app/models/: pydantic.py  tortoise.py
backend/app/schemas/: base.py  leads.py
backend/app/tests/: conftest.py  test_auth.py  test_chrome.py  test_leads.py  test_utils.py  utils.py
backend/db/: Dockerfile
backend/db/tests/: conftest.py  test_leads.py
backend/db/tests/unit/: test_leads.py
backend/docs/: .buildinfo  data-model.md  index.html  searchindex.js
backend/docs/.doctrees/: environment.pickle  index.doctree
backend/docs/_modules/app/: models.html
backend/docs/_modules/sqlalchemy/orm/: attributes.html
backend/docs/_sources/: index.rst.txt
backend/docs/source/: conf.py
backend/etl/: base.py  chrome.py  conf.py  glassdoor.py  linkedin.py  logging.py  pyproject.toml
backend/etl/etl/: base.py  conf.py  glassdoor.py
backend/etl/etl/leads/: enrich.py  scrape.py
backend/etl/leads/: enrich.py  scrape.py
backend/notebooks/: langchain.ipynb  llama_index.ipynb
backend/public/seeds/: certificates.json  contacts.json  cover-letters.json  education.json  experiences.json  leads.json  resumes.json  skills.json  users-old  users.json
baldin/: Pipfile  README.md  requirements.txt
cdk/: Pipfile  README.md  pyproject.toml
cdk/cdk/: TODO  app.py  conf.py  utils.py
cdk/cdk/stacks/: api.py  db.py  ecr.py  iam.py  proxy_server.py  s3.py  vpc.py
cloudformation/: README.md  pyproject.toml
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+291 files in other folders)
